welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: not found: value T
  setCouleurBrosse(T(j))
                   ^Array1:31: warning: enclosing method getMotif has result type Unit: return value discarded
  return T;
  ^